Mejoras en el backend
